fix: body overflow auto

--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -1,3 +1,7 @@
+body {
+  overflow: auto !important;
+}
+
 [data-theme='dark'] {
   body {
     color-scheme: dark;
